2004-10-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (location_entry_create): Backport 
	the change from HEAD to not fill the entry with the currently
	selected file or folder.

	* gtk/gtkpaned.c (gtk_paned_compute_position): Reduce rounding 
	error.  (#154658, John Cupitt)

	* gtk/gtktreeselection.c (gtk_tree_selection_get_selected): Clear
	the iter instead of returning it unmodified. (#154186, Jonathan Blandford)

	* gtk/gtkfilechooserentry.c (gtk_file_chooser_entry_focus): Pop up
	the completions again after tab.  (#147700, Jens Bech Madsen)

	* gtk/gtktreeview.c (gtk_tree_view_search_iter): Set the cursor
	before changing the selection to make the file chooser preview
	update work better.  (#143826, Tommi Komulainen)

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Update

Wed Oct  6 00:45:04 2004    <timj@birnet.org>

	* gdk/gdkwindow.c (gdk_window_is_viewable): check the iteration window
	variable, not just the window passed in. fixes #145270.

Tue Oct  5 21:00:54 2004  Tim Janik  <timj@gtk.org>

        * gtk/gtkwidget.c (gtk_widget_size_allocate): applied owen's patch
	for conditional ALLOC_NEEDED flag updates to preserve resizing
	flag invariants.

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Set 
	action_name.  (#154526, John Finlay)

	* gdk/x11/gdkwindow-x11.c (gdk_window_foreign_new_for_display): 
	Warn if the window is not foreign after all.  (#151378, 
	Gustavo Carneiro)

2004-10-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (icon_info_ensure_scale_and_pixbuf): 
	Make the code work as intended for unthemed icons; don't scale
	them up too much. Allow to scale them down, and do so 
	exactly.  (#154142, Ross Burton)
	(gtk_icon_info_load_icon): Amend docs.

	* gtk/gtkcelllayout.c (gtk_cell_layout_clear): Improve 
	docs.  (#154504, Dave Cook)

	* gtk/gtkwindow.c (gtk_window_set_icon_list): 
	(gtk_window_set_default_icon_list): Ref the new