@@ -1,3 +1,8 @@
+2004-10-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkfilechooserdefault.c (check_is_folder): Don't free
+	info too early.  (#154703, Morten Welinder)
+
 2004-10-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c (location_entry_create): Backport 
